Refactor translation API to use better request and response structures
